[package]
name = "jarm_online"
version = "0.2.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rust_jarm = "0.3"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
regex = "1.7"
csv = "1.3"
openssl = { version = "~0.10.66", features = ["vendored"] }  # Required for sentry
sentry = "^0.34"
rocket-sentry = "0.18"
redis = "0.27"
log = "0.4"
env_logger = "0.11"
async-std = { version = "1.12", features = ["attributes", "tokio1"] }
reqwest = { version = "^0.12.2", features = ["stream"] }
tempfile = "3.10.1"
sqlx = { version = "^0.7", features = [ "macros" ] }

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["deadpool_redis", "sqlx_sqlite"]

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
]

[dev-dependencies]
rstest = "0.23.0"
