[package]
name = "jarm_online"
version = "0.2.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rust_jarm = "0.3"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.5"
regex = "1.11"
csv = "1.3"
openssl = { version = "~0.10.72", features = ["vendored"] }  # Required for sentry
sentry = "^0.46"
rocket-sentry = "^1.0"
redis = "^1.0"
log = "^0.4"
env_logger = "0.11"
async-std = { version = "1.13", features = ["attributes", "tokio1"] }
reqwest = { version = "^0.13", features = ["stream", "json"] }
tempfile = "3.20.0"
sqlx = { version = "^0.7", features = [ "macros" ] }
constant_time_eq = "0.4.2"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["deadpool_redis", "sqlx_sqlite"]

[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",                # Lets you generate random UUIDs
]

[dev-dependencies]
rstest = "0.25.0"
